--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /* -------------------------custom pallet-------------------------*/
 :root {
-    --gray: #aba6a6;
-    --brown: #c2914dce;
-    --dark: rgb(36, 35, 35);
-    --blue: #db7c1c;
-    --black: #000;
-    --white: #fff;
+    --main-one: #aba6a6;
+    --main-two: #765931ce;
+    --main-three: rgb(36, 35, 35);
+    --main-four: #d0cdc9;
+    --main-five: rgb(10, 9, 9);
+    --main-six: #fff;
   }
   
   /* reset */
@@ -77,7 +77,7 @@
   
   a {
   text-decoration: none;
-  color: var(--gray);
+  color: var(--main-four);
   }
   
   img {
@@ -92,7 +92,7 @@
   header {
     width: 100%;
     height: 50px;
-    background-color: var(--dark);
+    background-color: var(--main-five);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -103,7 +103,7 @@
   }
   
   header > h3 {
-    color: var(--brown);
+    color: var(--main-two);
     font-size: min(5vw, 1.2em);
     text-align: center;
     margin: 3rem;
@@ -136,7 +136,7 @@
   
   #navbar > ul > li:hover {
     text-transform: uppercase ;
-    color: var(--blue);
+    color: var(--main-one);
     cursor: pointer;
   }
   
@@ -156,12 +156,6 @@
     text-decoration: none;
   }
   
-  a {
-    color: rgb(117, 194, 213);
-    font-size: 13px;
-    text-decoration: none;
-  }
-  
   /* media query*/
   @media (max-width: 61.25em){
   html {
@@ -177,45 +171,45 @@
   
   /* -------------------------main------------------------- */
   
-  /* welcome-section */
-  #welcome-section {
+  /* welcome */
+  #welcome {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100vh;
-    color: var(--white);
-    background-color: var(--blue);
+    color: var(--main-five);
+    background-color: var(--main-one);
   }
   
-  #welcome-section img {
+  #welcome img {
     width: max(100px, 18vw);
     margin-top: auto;
     padding: 0.1rem;
     border-radius: 50%;
   }
   
-  #welcome-section > h3 {
+  #welcome > h3 {
     margin-top: 0.2rem;
     padding: 3.5rem 0.75rem 1.5rem 0.75rem;
     font-weight: bolder;
   }
   
-  #welcome-section > p {
+  #welcome > p {
     font-weight: 300;
     text-align: center;
     font-style: italic;
     margin: 0 0.2rem;
     padding: 3.5rem;
-    color: var(--gray);
+    color: var(--main-five);
   } 
   
   /* projects */
   #projects {
   text-align: center;
   padding: 11rem 3rem;
-  background-image: linear-gradient(72deg, var(--black) 0%, var(--blue) 100%);
+  background-image: linear-gradient(72deg, var(--main-five) 0%, var(--main-one) 100%);
   
   }
   
@@ -227,8 +221,7 @@
   #projects > h2 {
   max-width: 640px;
   margin: 0 auto 6rem auto;
-  color: var(--gray);
-  /*border-bottom: 0.2rem solid var(--gray);*/
+  color: var(--main-five);
   }
   
   @media (max-width: 28.75em) {
@@ -258,17 +251,7 @@
   }
   
   .project-tile {
-  background-image: linear-gradient(90deg, var(--gray) 0%, var(--black) 100%);
-  /* border-radius: 1px; */
-  }
-  
-  .code {
-  color: var(--main-gray);
-  transition: color 0.3s ease-out;
-  }
-  
-  .project:hover .code {
-  color: var(--blue);
+  background-image: linear-gradient(90deg, var(--main-one) 0%, var(--main-five) 100%);
   }
   
   #projects img {
@@ -278,19 +261,18 @@
   }
   
   .project-title {
-  background-color: var(--dark);
-  color: var(--gray);
+  background-color: var(--main-five);
+  color: var(--main-one);
   font-size: 2rem;
   padding: 2rem 0.5rem;
   }
   
   .project-title:hover {
-  background-color: var(--brown);
-  color: var(--dark);
+  background-color: var(--main-one);
+  color: var(--main-five);
   }
   
   /* contact */
-  
   #contact {
   display: flex;
   flex-direction: column;
@@ -301,7 +283,7 @@
   height: 80vh;
   padding: 0 2rem;
   color: var(--white);
-  background-image: linear-gradient(5deg, var(--brown) 0%, var(--black) 100%);
+  background-image: linear-gradient(5deg, var(--main-four) 0%, var(--main-one) 100%);
   }
   
   @media (max-width: 28.75em) {
@@ -322,20 +304,17 @@
   .btn {
   display: inline-block;
   padding: 1rem 2rem;
-  /* border-radius: 2px; */
   }
   
   .contact-details {
   font-size: 2.4rem;
-  color: var(--gray);
-  /* text-shadow: 2px 2px 1px #1f1f1f; */
+  color: var(--main-five);
   transition: transform 0.3s ease-out;
   }
   
   .contact-details:hover {
-  color: var(--blue);
-  background: var(--gray);
-  /* transform: translateY(8px); */
+  color: var(--main-one);
+  background: var(--main-two);
   }
   
   /*-------------------------footer-------------------------*/
@@ -344,31 +323,13 @@
     display: flex;
     justify-content: space-evenly;
     padding: 2rem;
-    color: var(--white);
-    background-image: linear-gradient(5deg, var(--black) 0%, var(--blue) 100%);
-    /*border-top: 4px solid var(--main-red);*/
+    color: var(--main-four);
+    background-image: linear-gradient(5deg, var(--main-four) 0%, var(--main-five) 100%);
   }
   
   footer > p {
     margin: 2rem;
   }
-  
-  footer i {
-    vertical-align: middle;
-  }
-  
-  footer a {
-    margin: 1rem;
-    font-size: 1.7rem;
-    color: var(--gray);
-    /* text-shadow: 2px 2px 1px #1f1f1f; */
-    transition: transform 0.3s ease-out;
-    }
-    
-    footer a:hover {
-    color: var(--brown);
-    /* transform: translateY(8px); */
-    }
   
   @media (max-width: 28.75em) {
     footer {
